--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Product.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
+    <Compile Include="ProductDao\IProductDao.cs" />
+    <Compile Include="ProductDao\ProductDaoEntityFramework.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpecificProperty.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
