--- a/Model/App.Config
+++ b/Model/App.Config
@@ -11,6 +11,5 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="practicamadEntities" connectionString="metadata=res://*/PracticaMaD.Model.csdl|res://*/PracticaMaD.Model.ssdl|res://*/PracticaMaD.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=practicamad;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="practicamadEntities" connectionString="metadata=res://*/PracticaMaD.csdl|res://*/PracticaMaD.ssdl|res://*/PracticaMaD.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=practicamad;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
