--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -118,6 +118,10 @@
     <Compile Include="ProductService\ProductsDetails.cs" />
     <Compile Include="ProductService\ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingService\IShoppingService.cs" />
+    <Compile Include="ShoppingService\ShoppingCart.cs" />
+    <Compile Include="ShoppingService\ShoppingCartDetails.cs" />
+    <Compile Include="ShoppingService\ShoppingService.cs" />
     <Compile Include="SpecificProperty.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
