--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -113,6 +113,7 @@
     </Compile>
     <Compile Include="ProductDao\IProductDao.cs" />
     <Compile Include="ProductDao\ProductDaoEntityFramework.cs" />
+    <Compile Include="ProductService\CommentDetails.cs" />
     <Compile Include="ProductService\IProductService.cs" />
     <Compile Include="ProductService\ProductLinkDetails.cs" />
     <Compile Include="ProductService\ProductDetails.cs" />
