--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -65,24 +65,24 @@
     <Compile Include="Category.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
-    <Compile Include="DeliveryDao\DeliveryDaoEntityFramework.cs" />
-    <Compile Include="DeliveryDao\IDeliveryDao.cs" />
-    <Compile Include="Class1.cs" />
     <Compile Include="Comment.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
-    <Compile Include="CommentDao\CommentDaoEntityFramework.cs" />
-    <Compile Include="CommentDao\ICommentDao.cs" />
     <Compile Include="CreditCard.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
+    <Compile Include="Delivery.cs">
+      <DependentUpon>PracticaMaD.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DeliveryDao\DeliveryDaoEntityFramework.cs" />
+    <Compile Include="DeliveryDao\IDeliveryDao.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="CommentDao\CommentDaoEntityFramework.cs" />
+    <Compile Include="CommentDao\ICommentDao.cs" />
     <Compile Include="CategoryDao\CategoryDaoEntityFramework.cs" />
     <Compile Include="CategoryDao\ICategoryDao.cs" />
     <Compile Include="CreditCardDao\CreditCardDaoEntityFramework.cs" />
     <Compile Include="CreditCardDao\ICreditCardDao.cs" />
-    <Compile Include="Delivery.cs">
-      <DependentUpon>PracticaMaD.tt</DependentUpon>
-    </Compile>
     <Compile Include="DeliveryLine.cs">
       <DependentUpon>PracticaMaD.tt</DependentUpon>
     </Compile>
@@ -150,10 +150,12 @@
   <ItemGroup>
     <Content Include="PracticaMaD.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PracticaMaD.Model.edmx</DependentUpon>
       <LastGenOutput>PracticaMaD.Context.cs</LastGenOutput>
     </Content>
     <Content Include="PracticaMaD.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>PracticaMaD.Model.edmx</DependentUpon>
       <LastGenOutput>PracticaMaD.cs</LastGenOutput>
     </Content>
     <Content Include="Sql\SqlServerCreateDatabase.sql" />
@@ -161,11 +163,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Config" />
+    <None Include="packages.config" />
     <EntityDeploy Include="PracticaMaD.Model.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>PracticaMaD.Model.Designer.cs</LastGenOutput>
     </EntityDeploy>
-    <None Include="packages.config" />
     <None Include="PracticaMaD.Model.edmx.diagram">
       <DependentUpon>PracticaMaD.Model.edmx</DependentUpon>
     </None>
