--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="IProductServiceTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
