--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -57,7 +57,7 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ShoppingServiceTests.cs" />
+    <Compile Include="IShoppingServiceTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IProductServiceTest.cs" />
