--- a/Test/packages.config
+++ b/Test/packages.config
@@ -4,4 +4,5 @@
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net461" />
 </packages>
