--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -69,9 +69,11 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ICommentDaoTest.cs" />
+    <Compile Include="IProductDaoTest.cs" />
     <Compile Include="IShoppingServiceTests.cs" />
+    <Compile Include="ITagDaoTest.cs" />
     <Compile Include="TestManager.cs" />
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IProductServiceTest.cs" />
     <Compile Include="ICreditCardDaoTest.cs" />
