--- a/Web/packages.config
+++ b/Web/packages.config
@@ -1,4 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net461" />
+  <package id="MSTest.TestAdapter" version="2.1.2" targetFramework="net461" />
+  <package id="MSTest.TestFramework" version="2.1.2" targetFramework="net461" />
+  <package id="Ninject" version="3.3.4" targetFramework="net461" />
+  <package id="Ninject.Extensions.Interception" version="3.3.5" targetFramework="net461" />
 </packages>
