Casos de uso de user v2.0 y test de user v1.0

--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Transactions" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IUserServiceTest.cs" />
     <Compile Include="ICommentDaoTest.cs" />
     <Compile Include="IProductDaoTest.cs" />
     <Compile Include="IShoppingServiceTests.cs" />
