--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -144,6 +144,7 @@
     <Compile Include="UserService\LoginResult.cs" />
     <Compile Include="UserService\UserProfileDetails.cs" />
     <Compile Include="UserService\UserService.cs" />
+    <Compile Include="UserService\Util\IncorrectPasswordException.cs" />
     <Compile Include="UserService\Util\PasswordEncrypter.cs" />
   </ItemGroup>
   <ItemGroup>
