--- a/Model/App.Config
+++ b/Model/App.Config
@@ -11,8 +11,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="practicamadEntities" connectionString="metadata=res://*/PracticaMaD.Model.csdl|res://*/PracticaMaD.Model.ssdl|res://*/PracticaMaD.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=practicamad;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="practicamadEntities" connectionString="metadata=res://*/PracticaMad.Model.csdl|res://*/PracticaMad.Model.ssdl|res://*/PracticaMad.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=practicamad;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
