--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -113,6 +113,7 @@
     <Compile Include="ProductService\ProductService.cs" />
     <Compile Include="ProductService\TagBlock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShoppingService\DeliveryBlock.cs" />
     <Compile Include="ShoppingService\IShoppingService.cs" />
     <Compile Include="ShoppingService\ShoppingService.cs" />
     <Compile Include="SpecificProperty.cs">
