--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -100,6 +100,7 @@
     <Compile Include="TestManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IUserServiceTest.cs" />
+    <Compile Include="ICategoryDaoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
