Registro, listado y modificacion de las tarjetas de credito

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -84,6 +84,7 @@
     <Reference Include="Ninject.Extensions.Xml, Version=3.3.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.Extensions.Xml.3.3.0\lib\net45\Ninject.Extensions.Xml.dll</HintPath>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -107,8 +108,11 @@
     <Content Include="Pages\UserExists.aspx" />
     <Content Include="Pages\User\Authentication.aspx" />
     <Content Include="Pages\User\ChangePassword.aspx" />
+    <Content Include="Pages\User\ListCreditCards.aspx" />
     <Content Include="Pages\User\Logout.aspx" />
     <Content Include="Pages\User\Register.aspx" />
+    <Content Include="Pages\User\RegisterCreditCard.aspx" />
+    <Content Include="Pages\User\UpdateCreditCard.aspx" />
     <Content Include="Pages\User\UpdateUserProfile.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -141,6 +145,7 @@
     <Compile Include="HTTP\Util\CookiesManager.cs" />
     <Compile Include="HTTP\Util\loC\IoCManagerNinject.cs" />
     <Compile Include="HTTP\View\ApplicationObjects\Countries.cs" />
+    <Compile Include="HTTP\View\ApplicationObjects\CreditType.cs" />
     <Compile Include="HTTP\View\ApplicationObjects\Languages.cs" />
     <Compile Include="HTTP\View\ApplicationObjects\Locale.cs" />
     <Compile Include="Pages\Errors\InternalError.aspx.cs">
@@ -177,6 +182,13 @@
     <Compile Include="Pages\User\ChangePassword.aspx.designer.cs">
       <DependentUpon>ChangePassword.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\User\ListCreditCards.aspx.cs">
+      <DependentUpon>ListCreditCards.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\ListCreditCards.aspx.designer.cs">
+      <DependentUpon>ListCreditCards.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\User\Logout.aspx.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -190,6 +202,20 @@
     </Compile>
     <Compile Include="Pages\User\Register.aspx.designer.cs">
       <DependentUpon>Register.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\User\RegisterCreditCard.aspx.cs">
+      <DependentUpon>RegisterCreditCard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\RegisterCreditCard.aspx.designer.cs">
+      <DependentUpon>RegisterCreditCard.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\User\UpdateCreditCard.aspx.cs">
+      <DependentUpon>UpdateCreditCard.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\User\UpdateCreditCard.aspx.designer.cs">
+      <DependentUpon>UpdateCreditCard.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\User\UpdateUserProfile.aspx.cs">
       <DependentUpon>UpdateUserProfile.aspx</DependentUpon>
