--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -119,6 +119,7 @@
     <Compile Include="ShoppingService\DeliveryLineBlock.cs" />
     <Compile Include="ShoppingService\Exceptions\UnmatchingUserAndCardException.cs" />
     <Compile Include="ShoppingService\IShoppingService.cs" />
+    <Compile Include="ShoppingService\ShoppingCart.cs" />
     <Compile Include="ShoppingService\ShoppingCartDetails.cs" />
     <Compile Include="ShoppingService\ShoppingService.cs" />
     <Compile Include="SpecificProperty.cs">
