--- a/Web/Web.config
+++ b/Web/Web.config
@@ -5,11 +5,24 @@
     <section name="loggingConfiguration" type="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.LoggingSettings, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="Es.Udc.DotNet.PracticaMaD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <applicationSettings>
+    <Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
+      <setting name="PracticaMaD_defaultCount" serializeAs="String">
+        <value>20</value>
+      </setting>
+      <setting name="PracticaMaD_applicationURL" serializeAs="String">
+        <value>http://localhost:8081/PracticaMaD</value>
+      </setting>
+    </Es.Udc.DotNet.PracticaMaD.Web.Properties.Settings>
+  </applicationSettings>
+
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
       <add name="Flat File Trace Listener" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" fileName="c:\sourcecode\log\MiniPortal.Web.log" header="" footer="" formatter="SimpleLogFormatter" />
@@ -148,6 +161,7 @@
       </authorization>
     </system.web>
   </location>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
